<resources>
    <string name="app_name">LUCAS_HORI_RM89024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="fragment_agendar">Agendamento</string>
    <string name="fragment_medicos">Medicos</string>
    <string name="fragment_consultas">Consulta</string>
</resources>